--- a/index.html
+++ b/index.html
@@ -121,16 +121,16 @@
             border-radius: 10px;
         }
 
-        /* Fixed-size Photo Slideshow */
+        /* Fixed-size Photo Slideshow (no jumping) */
         #photo-slideshow {
             position: relative;
             width: 100%;
-            max-width: 900px; /* Increased maximum width */
-            height: 600px; /* Increased height */
+            max-width: 1280px;
+            height: 900px; /* fixed height so page doesn’t jump */
             margin: auto;
             overflow: hidden;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
             background-color: #f0e6e8; /* soft background while images load */
         }
 
@@ -138,10 +138,11 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 100%;
-            height: 100%;
+            max-width: 100%;
+            max-height: 100%;
             transform: translate(-50%, -50%);
-            object-fit: cover;
+            object-fit: contain; /* show full photo without cropping */
+            background-color: #000;
             opacity: 0;
             transition: opacity 1s ease-in-out;
         }
@@ -237,10 +238,10 @@
         <h3>Videos of the Venue</h3>
         <p>Click on the links below to see videos of the beautiful resort and its surroundings!</p>
         <ul class="video-list">
-            <li><a href="http://googleusercontent.com/youtube.com/16" target="_blank">Passion Fruit</a></li>
-            <li><a href="http://googleusercontent.com/youtube.com/17" target="_blank">Sunrise Experience - Canoe</a></li>
-            <li><a href="http://googleusercontent.com/youtube.com/18" target="_blank">Morning Lake</a></li>
-            <li><a href="http://googleusercontent.com/youtube.com/19" target="_blank">Palmgrove</a></li>
+            <li><a href="https://www.youtube.com/watch?v=0FppfN4LKOA" target="_blank">Passion Fruit</a></li>
+            <li><a href="https://www.youtube.com/watch?v=ucu2lM-qbME" target="_blank">Sunrise Experience - Canoe</a></li>
+            <li><a href="https://www.youtube.com/watch?v=Cm88-CNHztw" target="_blank">Morning Lake</a></li>
+            <li><a href="https://www.youtube.com/watch?v=xs7xwAfwChg&pp=ygUecGFsbWdyb3ZlIGxha2UgcmVzb3J0IGFsbGVwcGV5" target="_blank">Palmgrove</a></li>
         </ul>
     </section>
 
