--- a/index.html
+++ b/index.html
@@ -250,14 +250,6 @@
         <div class="iframe-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d983.7184783409782!2d76.3552467285284!3d9.519682699407698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0884fa2eac59fb%3A0xca0799cc685a8bb6!2sPalmgrove%20Lake%20Resort!5e0!3m2!1sen!2sfr!4v1755351880452!5m2!1sen!2sfr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-
-        <h3>Videos of the Venue</h3>
-        <ul class="video-list">
-            <li><a href="https://www.youtube.com/watch?v=0FppfN4LKOA" target="_blank">Passion Fruit</a></li>
-            <li><a href="https://www.youtube.com/watch?v=ucu2lM-qbME" target="_blank">Sunrise Experience - Canoe</a></li>
-            <li><a href="https://www.youtube.com/watch?v=Cm88-CNHztw" target="_blank">Morning Lake</a></li>
-            <li><a href="https://www.youtube.com/watch?v=xs7xwAfwChg&pp=ygUecGFsbWdyb3ZlIGxha2UgcmVzb3J0IGFsbGVwcGV5" target="_blank">Palmgrove</a></li>
-        </ul>
     </section>
 
     <section id="photos-section">
@@ -342,6 +334,18 @@
     <h2>Gift Registry</h2>
     <p>Unfortunately, we cannot carry gifts back to France. Your presence is the only gift we need! </p>
 </section>
+
+<section>
+        <p>Some short videos of the serene nature!</p>
+            <ul class="video-list">
+            <li><a href="https://www.youtube.com/watch?v=0FppfN4LKOA" target="_blank">Passion Fruit</a></li>
+            <li><a href="https://www.youtube.com/watch?v=ucu2lM-qbME" target="_blank">Sunrise Experience - Canoe</a></li>
+            <li><a href="https://www.youtube.com/watch?v=Cm88-CNHztw" target="_blank">Morning Lake</a></li>
+            <li><a href="https://www.youtube.com/watch?v=xs7xwAfwChg&pp=ygUecGFsbWdyb3ZlIGxha2UgcmVzb3J0IGFsbGVwcGV5" target="_blank">Palmgrove</a></li>
+        </ul>
+</section>
+
+
 
 <footer>
     <p>Raj & Ailsa's Wedding | #RajAndAilsa2026 | website updated: 24/8/25 v 2.2 </p>
