--- a/index.html
+++ b/index.html
@@ -336,14 +336,14 @@
 </section>
 
 <section>
-        <p>Some short videos of the serene nature!</p>
-            <ul class="video-list">
-            <li><a href="https://www.youtube.com/watch?v=0FppfN4LKOA" target="_blank">Passion Fruit</a></li>
-            <li><a href="https://www.youtube.com/watch?v=ucu2lM-qbME" target="_blank">Sunrise Experience - Canoe</a></li>
-            <li><a href="https://www.youtube.com/watch?v=Cm88-CNHztw" target="_blank">Morning Lake</a></li>
-            <li><a href="https://www.youtube.com/watch?v=xs7xwAfwChg&pp=ygUecGFsbWdyb3ZlIGxha2UgcmVzb3J0IGFsbGVwcGV5" target="_blank">Palmgrove</a></li>
-        </ul>
+    <p>Some short videos of the serene nature!</p>
+    <a href="https://www.youtube.com/watch?v=T3ITvj5oAsc&list=PL6jHcIJVn1HIsP40opWncM1Uh0ApMFBvy&index=3&ab_channel=PalmgroveLakeResort" 
+       target="_blank" 
+       class="button">
+       🎥 Watch Videos
+    </a>
 </section>
+
 
 
 
