--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 </div>
 
 <section id="rsvp-section">
-    <h2>RSVP</h2>
+    <h2>RSVP (deadline 30 September)</h2>
     <p>Please let us know if you’ll be able to attend by filling out the form below:</p>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSemInS7D-cBgCs13zzkBErga0uFSegm38covmsPGZ-XES6zNw/viewform?usp=dialog" rel="stylesheet" width="100%" height="600" style="border:none;"></iframe>
 </section>
