--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             content: "";
             position: absolute;
             top: 0; left: 0; right: 0; bottom: 0;
-            background: rgba(0,0,0,0.35); /* dark overlay for readability */
+            background: rgba(0,0,0,0.35);
             z-index: 0;
         }
         .header-content {
@@ -57,8 +57,8 @@
 
         /* NAVBAR */
         .navbar {
-            background: rgba(212, 107, 130, 0.95); /* translucent pink */
-            backdrop-filter: blur(6px); /* elegant blur over image */
+            background: rgba(212, 107, 130, 0.95);
+            backdrop-filter: blur(6px);
             overflow: hidden;
             text-align: center;
             padding: 10px 0;
@@ -86,7 +86,6 @@
             margin: auto;
         }
 
-        /* All section headings */
         section h2 {
             font-family: 'Playfair Display', serif;
             font-size: 2.5em;
@@ -95,7 +94,6 @@
             margin-bottom: 20px;
         }
 
-        /* Countdown Timer */
         #countdown {
             font-size: 1.5em;
             color: #d46b82;
@@ -103,7 +101,6 @@
             margin-bottom: 40px;
         }
 
-        /* RSVP Button */
         .button {
             display: inline-block;
             background: #d46b82;
@@ -118,7 +115,6 @@
             background: #b94c67;
         }
 
-        /* Flexbox container for side-by-side sections */
         .content-container {
             display: flex;
             flex-wrap: wrap;
@@ -137,17 +133,16 @@
             border-radius: 10px;
         }
 
-        /* Fixed-size Photo Slideshow (no jumping) */
         #photo-slideshow {
             position: relative;
             width: 100%;
-            max-width: 1280px;
-            height: 900px; /* fixed height so page doesn’t jump */
+            max-width: 1200px;
+            height: 900px;
             margin: auto;
             overflow: hidden;
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-            background-color: #f0e6e8; /* soft background while images load */
+            background-color: #f0e6e8;
         }
 
         #slideshow-image {
@@ -157,7 +152,7 @@
             max-width: 100%;
             max-height: 100%;
             transform: translate(-50%, -50%);
-            object-fit: contain; /* show full photo without cropping */
+            object-fit: contain;
             background-color: #000;
             opacity: 0;
             transition: opacity 1s ease-in-out;
@@ -167,11 +162,10 @@
             opacity: 1;
         }
 
-        /* Responsive styles for iframe */
         .iframe-container {
             position: relative;
             width: 100%;
-            padding-bottom: 75%; /* 4:3 Aspect Ratio */
+            padding-bottom: 75%;
             height: 0;
             overflow: hidden;
             border-radius: 8px;
@@ -203,7 +197,6 @@
             text-decoration: underline;
         }
         
-        /* Footer */
         footer {
             text-align: center;
             background: #f28ca3;
@@ -391,17 +384,21 @@
     let currentPhotoIndex = 0;
     const slideshowImage = document.getElementById("slideshow-image");
 
+    // Show first image immediately
+    slideshowImage.src = photoPaths[currentPhotoIndex];
+    slideshowImage.classList.add('visible');
+
     function changePhoto() {
         slideshowImage.classList.remove('visible');
 
         setTimeout(() => {
+            // move to next image
+            currentPhotoIndex = (currentPhotoIndex + 1) % photoPaths.length;
             slideshowImage.src = photoPaths[currentPhotoIndex];
             slideshowImage.classList.add('visible');
-            currentPhotoIndex = (currentPhotoIndex + 1) % photoPaths.length;
         }, 1000);
     }
 
-    changePhoto();
     setInterval(changePhoto, 5000);
 </script>
 
