paypal link added

--- a/index.html
+++ b/index.html
@@ -325,7 +325,12 @@
 </section>
 <section>
     <h2>Gift Registry</h2>
-    <p>Unfortunately, we cannot carry gifts back to France. Your presence is the only gift we need! </p>
+    <p> Your presence at our wedding is the greatest gift we could ask for.  </p>
+    <p> If you would like to honor us with a gift, a contribution would be sincerely appreciated as we plan for our future together.
+    <a href="paypal.me/weddingAilsaNRaj" target="_blank">PayPal Link</a>
+    </p>
+
+
 </section>
 
 <section>
