updated paypal link

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     <h2>Gift Registry</h2>
     <p> Your presence at our wedding is the greatest gift we could ask for.  </p>
     <p> If you would like to honor us with a gift, a contribution would be sincerely appreciated as we plan for our future together.
-    <a href="paypal.me/weddingAilsaNRaj" target="_blank">PayPal Link</a>
+    <a href="https://www.paypal.com/paypalme/weddingAilsaNRaj">PayPal Gift Link</a>
     </p>
 
 
